package com.guci.MaJiangGame;

/**
 * go 方法的返回值 -1表示未产生行为,0表示胡牌
 */
public interface DianPaoHuAction extends Action{
}
