package com.guci.MaJiangGame;

/**
 * go 方法的返回值 -1表示未产生行为,0表示胡牌,-2 表示杠牌.其它值表示打出的牌
 */
public interface MoPaiAction extends Action{
}
