package com.guci.MaJiangGame;

public interface PengGangAction extends Action{
}
