@startuml
'https://plantuml.com/class-diagram
left to right direction

together {
    class Game
    class Player{
        ActionList<MoPaiAction> 摸牌行为链
        ActionList<DianPaoHuAction> 点炮胡行为链
        ActionList<BasicPengGangAction> 碰杠牌行为链
    }
    Game o-- Player:拥有 4
}
together {
    interface Action{
        int do(int input)
    }
    note top :  抽象行为

    interface ActionList{
        int do(int input)
    }
    note top :行为链

    ActionList *- Action
    interface MoPaiAction
    interface PengGangAction
    interface DianPaoHuAction
    Action <|-- MoPaiAction
    Action <|-- PengGangAction
    Action <|-- DianPaoHuAction

    class BasicMoPaiAction implements MoPaiAction
    class DingQueMoPaiAction implements MoPaiAction
    class IsolatingMoPaiAction implements MoPaiAction
    class BasicPengGangAction implements PengGangAction
    class BasicDianPaoHuAction implements DianPaoHuAction

}

@enduml